qtbase-opensource-src (5.15.8+dfsg-3) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Use ${DEB_HOST_GNU_TYPE} substitution in debian/qt5-qmake.install.
  * Add upstream patch to fix denial-of-service in Qt SQL ODBC plugin
    (CVE-2023-24607, closes: #1031872).
  * Update debian/libqt5gui5.symbols from s390x build log.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 31 Jan 2023 19:35:03 +0400

qtbase-opensource-src (5.15.8+dfsg-2) unstable; urgency=medium

  * Update debian/libqt5gui5.symbols from buildds’ logs.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 13 Jan 2023 11:41:54 +0400

qtbase-opensource-src (5.15.8+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Refresh and rebase patches for the new release.
  * Bump ABI version to qtbase-abi-5-15-8.
  * Backport upstream patch to set geometry property in QXcbWindow after
    checking minimum size (closes: #1025997).
  * Bump Standards-Version to 4.6.2, no changes needed.
  * Update debian/copyright.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 04 Jan 2023 22:52:00 +0400

qtbase-opensource-src (5.15.7+dfsg-3) unstable; urgency=medium

  * Backport upstream patch to fix deletion order in QImageReader/Writer
    destructors.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 12 Jan 2023 15:43:32 +0400

qtbase-opensource-src (5.15.7+dfsg-2) unstable; urgency=medium

  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 17 Dec 2022 18:20:05 +0300

qtbase-opensource-src (5.15.7+dfsg-1) experimental; urgency=medium

  * New upstream release (5.15.7).
    - Refresh existing patches.
    - Update symbols from amd64 build logs.
  * Bump ABI version to qtbase-abi-5-15-7.

 -- Simon Quigley <tsimonq2@debian.org>  Tue, 01 Nov 2022 16:07:09 -0500

qtbase-opensource-src (5.15.6+dfsg-5) unstable; urgency=medium

  * Promote qtwayland5 from Suggests to Recommends (closes: #998698).